created transformed train and test data set

--- a/Notebooks/ml_model_part1.ipynb
+++ b/Notebooks/ml_model_part1.ipynb
@@ -3110,6 +3110,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 25;\n",
+       "                var nbb_unformatted_code = \"save_dataframe(X_train, \\\"X_train_tr.csv\\\")\";\n",
+       "                var nbb_formatted_code = \"save_dataframe(X_train, \\\"X_train_tr.csv\\\")\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "save_dataframe(X_train, \"X_train_tr.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 26;\n",
+       "                var nbb_unformatted_code = \"save_dataframe(X_test, \\\"X_test.tr.csv\\\")\";\n",
+       "                var nbb_formatted_code = \"save_dataframe(X_test, \\\"X_test.tr.csv\\\")\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "save_dataframe(X_test, \"X_test.tr.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3373,7 +3447,7 @@
     }
    ],
    "source": [
-    "# save_model(log_reg, \"log_reg.pkl\")"
+    "save_model(log_reg, \"log_reg.pkl\")"
    ]
   },
   {
@@ -3474,7 +3548,7 @@
     }
    ],
    "source": [
-    "# save_model(sgd_clf, \"sgd_clf.pkl\")"
+    "save_model(sgd_clf, \"sgd_clf.pkl\")"
    ]
   },
   {
@@ -3576,7 +3650,7 @@
     }
    ],
    "source": [
-    "# save_model(lin_svm_clf, \"lin_svm_clf.pkl\")"
+    "save_model(lin_svm_clf, \"lin_svm_clf.pkl\")"
    ]
   },
   {
@@ -3673,7 +3747,7 @@
     }
    ],
    "source": [
-    "# save_model(tree_clf, \"tree_clf.pkl\")"
+    "save_model(tree_clf, \"tree_clf.pkl\")"
    ]
   },
   {
@@ -3868,7 +3942,7 @@
     }
    ],
    "source": [
-    "# save_model(rf_clf, \"rf_clf.pkl\")"
+    "save_model(rf_clf, \"rf_clf.pkl\")"
    ]
   },
   {
