--- a/Notebooks/ml_model_part1.ipynb
+++ b/Notebooks/ml_model_part1.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The nb_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext nb_black\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 1;\n",
+       "                var nbb_cell_id = 51;\n",
        "                var nbb_unformatted_code = \"# import libraries\\nimport os\\nimport joblib\\nimport pandas as pd\\nimport numpy as np\\nimport matplotlib.pyplot as plt\\n\\n%matplotlib inline\\nimport seaborn as sns\\nimport plotly.express as px\\nimport plotly.graph_objects as go\\n\\n# set display options\\npd.options.display.max_columns = 999\\npd.options.display.max_rows = 50\\n# code formating\\n%load_ext nb_black\\n\\n# project paths\\nproject_root_dir = os.path.normpath(os.getcwd() + os.sep + os.pardir)\\ndata_path = os.path.join(project_root_dir, \\\"data\\\")\\nimage_path = os.path.join(project_root_dir, \\\"images\\\")\\nos.makedirs(image_path, exist_ok=True)\\nmodel_path = os.path.join(project_root_dir, \\\"models\\\")\\nos.makedirs(model_path, exist_ok=True)\\n\\n# function for loading data\\ndef load_data(filename, data_path=data_path):\\n    csv_path = os.path.join(data_path, filename)\\n    return pd.read_csv(csv_path)\\n\\ndef save_model(model, model_name, path=model_path):\\n    \\\"\\\"\\\"This function save the trained model in pickle format\\\"\\\"\\\"\\n    path = os.path.join(model_path, model_name)\\n    joblib.dump(model, path)\\n    \\ndef load_model(model_name, path=model_path):\\n    \\\"\\\"\\\"This function loads the model\\\"\\\"\\\"\\n    model_to_load = os.path.join(model_path, model_name)\\n    return joblib.load(model_to_load)\\n\\n# function for saving data as csv file\\ndef save_dataframe(df, filename, file_path=data_path):\\n    \\\"\\\"\\\"\\n    This function takes a dataframe and save it as a csv file.\\n    \\\"\\\"\\\"\\n    path = os.path.join(file_path, filename)\\n    df.to_csv(path, index=False)\";\n",
        "                var nbb_formatted_code = \"# import libraries\\nimport os\\nimport joblib\\nimport pandas as pd\\nimport numpy as np\\nimport matplotlib.pyplot as plt\\n\\n%matplotlib inline\\nimport seaborn as sns\\nimport plotly.express as px\\nimport plotly.graph_objects as go\\n\\n# set display options\\npd.options.display.max_columns = 999\\npd.options.display.max_rows = 50\\n# code formating\\n%load_ext nb_black\\n\\n# project paths\\nproject_root_dir = os.path.normpath(os.getcwd() + os.sep + os.pardir)\\ndata_path = os.path.join(project_root_dir, \\\"data\\\")\\nimage_path = os.path.join(project_root_dir, \\\"images\\\")\\nos.makedirs(image_path, exist_ok=True)\\nmodel_path = os.path.join(project_root_dir, \\\"models\\\")\\nos.makedirs(model_path, exist_ok=True)\\n\\n# function for loading data\\ndef load_data(filename, data_path=data_path):\\n    csv_path = os.path.join(data_path, filename)\\n    return pd.read_csv(csv_path)\\n\\n\\ndef save_model(model, model_name, path=model_path):\\n    \\\"\\\"\\\"This function save the trained model in pickle format\\\"\\\"\\\"\\n    path = os.path.join(model_path, model_name)\\n    joblib.dump(model, path)\\n\\n\\ndef load_model(model_name, path=model_path):\\n    \\\"\\\"\\\"This function loads the model\\\"\\\"\\\"\\n    model_to_load = os.path.join(model_path, model_name)\\n    return joblib.load(model_to_load)\\n\\n\\n# function for saving data as csv file\\ndef save_dataframe(df, filename, file_path=data_path):\\n    \\\"\\\"\\\"\\n    This function takes a dataframe and save it as a csv file.\\n    \\\"\\\"\\\"\\n    path = os.path.join(file_path, filename)\\n    df.to_csv(path, index=False)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +102,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 2;\n",
+       "                var nbb_cell_id = 52;\n",
        "                var nbb_unformatted_code = \"# Read the data\\nX_train = load_data(\\\"train_values.csv\\\")\\ny_train = load_data(\\\"train_labels.csv\\\")\\nX_test = load_data(\\\"test_values.csv\\\")\\nsubmission_format = load_data(\\\"submission_format.csv\\\")\";\n",
        "                var nbb_formatted_code = \"# Read the data\\nX_train = load_data(\\\"train_values.csv\\\")\\ny_train = load_data(\\\"train_labels.csv\\\")\\nX_test = load_data(\\\"test_values.csv\\\")\\nsubmission_format = load_data(\\\"submission_format.csv\\\")\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +529,7 @@
        "4                             0                        0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,7 +538,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 3;\n",
+       "                var nbb_cell_id = 53;\n",
        "                var nbb_unformatted_code = \"X_train.head()\";\n",
        "                var nbb_formatted_code = \"X_train.head()\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
